[package]
name = "tarkov-status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11.18", features = [ "json" ] }
tokio = { version = "1.28.1", features = ["time", "rt", "macros", "rt-multi-thread", "signal"] }
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1.12"
log = "0.4.0"
env_logger = "0.10.0"
webhook = { git = "https://github.com/thoo0224/webhook-rs" }